added modal for all elements

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   position: absolute;
 }
 
-.selecteddiv, .selectedinput, .selectedbutton{
+.selected{
   padding: 2px;
   border: 2px solid rgb(221, 82, 82) !important;
 }
